# ykvc

./: .gitignore  Cargo.toml  README.md  clippy.toml  install.sh  tarpaulin.toml
.github/workflows/: audit.yml  ci.yml  release.yml
src/: error.rs  keyfile.rs  main.rs  yubikey.rs
src/platform/: linux.rs  macos.rs  mod.rs
tests/: cli_integration.rs
tests/common/: mod.rs
